[package]
edition = "2021"
name = "growattproxy"
version = "0.1.0"
default-run = "growattproxy"

[features]
sniffer = ["dep:pcap"]

[dependencies]
env_logger = "0.10.0"
tokio = { version = "1.21.2", features = ["macros", "net", "io-util", "rt"] }
log = "0.4.17"
clap = { version = "4.0.18", features = ["derive"] }
futures = "0.3.25"
local-ip-address = "0.5.1"
crc16 = "0.4.0"
num-rational = "0.4"
rumqttc = "0.20.0"
serde_json = "1.0"
pcap = { version = "1.0.0", optional = true }

[build-dependencies]
cmake = "0.1"
cc = "1.0"
